deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-predict
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-predict
  template:
    metadata:
      labels:
        app: api-predict
    spec:
      containers:
        - name: api-predict
          image: boobogo/api-predict:latest
          ports:
            - containerPort: 5000
