service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-predict-service
spec:
  type: NodePort
  selector:
    app: api-predict
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30081  #expose app on port 30081
