ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: bold.servebeer.com
    http:
      paths:
      - path: /|/contact|/projects|/IoT|/algo|/trade
        pathType: ImplementationSpecific  # Allow regex-style path
        backend:
          service:
            name: front-end-service
            port:
              number: 80
      - path: /predict
        pathType: Prefix
        backend:
          service:
            name: api-predict-service
            port:
              number: 80
